css/main.css
/*************************************************************************************************/
/* GENERAL */
/*************************************************************************************************/

:root {
    --theme-color-1: #70C2CF;
    --theme-color-2: #CCDDDE;
    --theme-color-3: #66ACB7;
    --theme-color-4: #0C707A;
    --theme-color-5: #152829;

    --main-width: 1280px;
}

@font-face {
    font-family: "DINNeuzeitGroteskStd-Bold";
    src: url("../woff/DINNeuzeitGroteskStd-BdCond.woff") format("woff");
}

@font-face {
    font-family: "DINNeuzeitGroteskStd-Light";
    src: url("../woff/DINNeuzeitGroteskStd Light.woff") format("woff");
}




* {
    font-family: 'Roboto', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover {
    filter: brightness(125%);
}

summary {
    list-style: none;
}

ul {
    list-style: none;
}

body {
    margin: 0;
    padding: 0;

    /*
    background-size: 1600px;
    background-position-x: 50%;
    background-position-y: -297px;
    background-repeat: no-repeat;
    background-image: url('../img/SBS_Book_WebSite.jpg');
    opacity: .75;
    */
}


button {
    background-color: var(--theme-color-4);
    padding: 10px 32px;
    font-size: 11pt;
    color: white;
    border: 0;
    border-radius: 30px;
    cursor: pointer;
}

button:hover {
    filter: brightness(125%);
}

button:active {
    position: relative;
    top: 1px;
    left: 1px;
}



/*************************************************************************************************/
/* HEADER */
/*************************************************************************************************/

header {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 69px;
    background: var(--theme-color-1);
    font-size: 13pt;

    display: flex;
    flex-wrap: nowrap;
    justify-content: center;
}

header .wrap-left {
    background: var(--theme-color-4);
    flex: 1;
}

header .wrap-center {
    background: var(--theme-color-1);
    flex: 0 1 1024px;
    display: flex;
}

header .wrap-right {
    background-color: --var(--theme-color-1);
    flex: 1;
}


header #cambridge {
    background-color: var(--theme-color-4);
    flex: 0 0 147px;
    height: 100%;
    /* width: 27.2%; */
    margin: 0;
    text-align: right;
    display: flex;
    justify-content: right;
    align-items: center;
}


header #cambridge img {
    height: 24%;
    margin: 0 5px 0 0;
}

header #medicine {
    margin: 0 0 0 10px;
    flex: 0;
    color: var(--theme-color-4);
    letter-spacing: 0.01em;
    font-weight: 500;
    display: flex;
    justify-content: left;
    align-items: center;
    pointer-events: none;
}

header #menu {
    color: var(--theme-color-4);
    flex: 1;
    font-size: 12pt;
    display: flex;
    justify-content: center;
    align-items: center;
}

header #menu ul {
    margin: 0;
    padding: 0 0 0 48px;
}

header #menu ul li {
    display: inline;
    margin: 0 17px 0 0;
}

header #menu ul li a:hover {
    filter: brightness(125%);
}

header #menu ul li.button {
    margin: 0 28px 0 0;
}

header #menu button {
    padding: 11px 29px;
    background-color: var(--theme-color-4);
    position: relative;
    top: -2px;
}


/*************************************************************************************************/
/* MAIN */
/*************************************************************************************************/

main {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    align-items: center;
}

section {
    flex: 1;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

section .wrapper {
    flex: 1;
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
    padding: 40px 0;
}

section h2 {
    text-transform: uppercase;
    text-align: center;
    margin: 16px 0;
    font-size: 24pt;
    font-weight: 500;
}



/*************************************************************************************************/
/* HERO */
/*************************************************************************************************/

#hero {
    padding: 40px 0 0 0;
    background-color: var(--theme-color-2);
}

#hero .wrapper {
    padding: 20px 0 0 0;
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    max-width: var(--main-width);
}

#hero .text {
    flex: 2.3;
    padding: 8px 0;
    margin: 0;
    display: flex;
    flex-wrap: nowrap;
    justify-content: right;
    flex-direction: row-reverse;
}

#hero .text .text-wrapper {
    flex: 1;
    max-width: 547px;
    padding-left: 30px;
    padding-right: 20px;
}

#hero figure {
    flex: 1.75;
    margin: 0;
    width: 100%;
    height: 100%;
    min-height: 586px;
    background-image: url('../img/SBS_Book_MockUp_01.webp');
    background-repeat: no-repeat;
    background-position: -171px -84px;
    background-size: 126%;
}

#hero figure img {
    width: 100%;
}

#hero h1 {
    text-transform: uppercase;
    color: white;
    font-family: 'DINNeuzeitGroteskStd-Bold';
    font-size: 44pt;
    margin: 18px 0 20px 0;
    letter-spacing: .012em;
}

#hero h2 {
    color: white;
    font-family: 'DINNeuzeitGroteskStd-Light';
    text-align: left;
    font-size: 22pt;
    margin: 0 0 16px 0;
    line-height: 1.1em;
    letter-spacing: .025em;
}

#hero h3 {
    text-transform: uppercase;
    color: var(--theme-color-3);
    font-weight: 400;
    font-size: 18pt;
    margin: 22px 0 0 0;
    letter-spacing: .02em;
}

#hero h4 {
    color: var(--theme-color-4);
    font-weight: 400;
    font-size: 18.5pt;
    letter-spacing: .006em;
    line-height: 1.1em;
}

#hero summary {
    margin: 15px 0 36px 0;
    line-height: 1.32em;
    font-size: 15pt;
}

#hero button {
    text-transform: uppercase;
    font-size: 14pt;
    padding: 16px 39px;
    margin-right: 26px;
}
/* ... */

